P2/Arrays/01/var/archive/xmlreports/0/0/4/000130
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="130" judge-id="5" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>b1828165-18d9-44d8-a0f3-a0ea8ac88056</uuid>
  <compiler_output>000130.cpp:1:1: error: expected unqualified-id
/rightcode\
^
1 error generated.
</compiler_output>
</testing-report>
